python/testData/quickFixes/PyAddImportQuickFixTest/binarySkeletonStdlibModule/main.py
import re

import mod

print(re, <error descr="Unresolved reference 'sys'">s<caret>ys</error>, mod)